# pytorch_project

./: README.md  pyproject.toml
src/first/: main.py
src/standard/: data_londer.py  nn.py
src/standard/model/weights/: nn.pth
